--- a/index.html
+++ b/index.html
@@ -1,9 +1,178 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<body>
-    <h1>Hello World</h1>
-    <p>I am hosted with Github pages.</p>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>MAP673 Portfolio</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Font Awesome CSS from CDN -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+
+  <!-- Google web font -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+
+  <!-- Custom styles for this template -->
+  <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="#page-top">Jos Portfolio</a>
+      <div class="float-end">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Projects Section -->
+  <section id="projects" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
+          <div class="card h-100">
+            <iframe width='100%' height='245px' src="https://api.mapbox.com/styles/v1/josleow/ckq8gyxwn2lf618sajski9ga3.html?title=false&access_token=pk.eyJ1Ijoiam9zbGVvdyIsImEiOiJja3B1Mjc1eDUwcmZhMnVxdXZicm82OXdmIn0.uVQObdOPYP3dBmMTgof5Jw&zoomwheel=false#13.12/1.36645/103.78079/348.8/1" title="final" style="border:none;"></iframe>
+            <div class="card-body">
+              <h4 class="card-title">
+                Project One
+              </h4>
+              <p class="card-text">
+                With GeoJSON.io, map icons on Singapore map
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
+          <div class="card h-100">
+            <a href="https://josleowuk.github.io/sg/"><img class="card-img-top" src="images/sg.png" alt="" /></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="https://josleowuk.github.io/sg/">Project Two</a>
+              </h4>
+              <p class="card-text">
+                Singapore information: camera icons with popup images.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
+          <div class="card h-100">
+            <img class="card-img-top" src="images/hex.png" alt="" />
+            <div class="card-body">
+              <h4 class="card-title">
+                Project Three
+              </h4>
+              <p class="card-text">
+                Heatmap on Breweries via QGIS
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
+          <div class="card h-100">
+            <a href="https://josleowuk.github.io/places/" target="_blank"><img class="card-img-top" src="images/map672-final.png" alt="" /></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="https://josleowuk.github.io/places/" target="_blank">Project Four</a>
+              </h4>
+              <p class="card-text">
+                Place details with price per night. Colored markers as regions. Circles to represent the price from $ to $$$$
+              </p>
+            </div>
+          </div>
+        </div>
+
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h2>About me</h2>
+          <div class="my-5 clearfix">
+            <div class="float-md-left mb-5 mr-md-4">
+              <img class="rounded-circle img-fluid" src="images/jap.jpeg" alt="" />
+            </div>
+            <p class="lead">
+              Hi, I'm Josephine; for short Jos. I'm a web developer specializing
+              in frontend development and currently taking web mapping classes to learn using
+              libraries as Leaflet and D3.js.
+            </p>
+            <p class="lead">
+              When I'm not banging my head against assignments, I'm playing Nintendo Switch and reading novels.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Skills</h3>
+          <dl>
+            <dt>GIS</dt>
+            <dd>
+              QGIS for data analysis, manipulation, and, format conversion
+            </dd>
+            <dd>PostGIS/SQL for data querying</dd>
+            <dt>Web Mapping</dt>
+            <dd>
+              Leaflet for raster tilesets, basic thematic mapping, and telling
+              stories with maps
+            </dd>
+
+            <dt>Coding</dt>
+            <dd>JavaScript</dd>
+            <dd>Python</dd>
+          </dl>
+        </div>
+        <div class="col-md-6">
+          <h3>Get in touch!</h3>
+          <ul class="list-unstyled">
+
+            <li class="">
+              <i class="fa fa-envelope mr-2"></i><a href="mailto:jos.leow@uky.edu"> jos.leow@uky.edu</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        Copyright &copy; Jos Portfolio 2021
+      </p>
+    </div>
+  </footer>
+
+  <!-- JQuery JavaScript -->
+  <!-- Note: jQuery is no longer needed with Bootstrap 5 and above. -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+
+  <!-- Bootstrap JavaScript -->
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
