--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
           <div class="card h-100">
-            <iframe width='100%' height='245px' src="https://api.mapbox.com/styles/v1/josleow/ckq8gyxwn2lf618sajski9ga3.html?title=false&access_token=pk.eyJ1Ijoiam9zbGVvdyIsImEiOiJja3B1Mjc1eDUwcmZhMnVxdXZicm82OXdmIn0.uVQObdOPYP3dBmMTgof5Jw&zoomwheel=false#13.12/1.36645/103.78079/348.8/1" title="final" style="border:none;"></iframe>
+            <iframe width='100%' class='fit-image' src="https://api.mapbox.com/styles/v1/josleow/ckq8gyxwn2lf618sajski9ga3.html?title=false&access_token=pk.eyJ1Ijoiam9zbGVvdyIsImEiOiJja3B1Mjc1eDUwcmZhMnVxdXZicm82OXdmIn0.uVQObdOPYP3dBmMTgof5Jw&zoomwheel=false#13.12/1.36645/103.78079/348.8/1" title="final" style="border:none;"></iframe>
             <div class="card-body">
               <h4 class="card-title">
                 Project One
@@ -64,7 +64,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
           <div class="card h-100">
-            <a href="https://josleowuk.github.io/sg/"><img class="card-img-top" src="images/sg.png" alt="" /></a>
+            <a href="https://josleowuk.github.io/sg/"><img class="card-img-top fit-image" src="images/sg.png" alt="" /></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://josleowuk.github.io/sg/">Project Two</a>
@@ -77,20 +77,21 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
           <div class="card h-100">
-            <img class="card-img-top" src="images/hex.png" alt="" />
+            <img class="card-img-top fit-image" src="images/hex.png" alt="" />
             <div class="card-body">
               <h4 class="card-title">
                 Project Three
               </h4>
               <p class="card-text">
-                Heatmap on Breweries via QGIS
+                Heatmap on Brewerssies via QGIS
               </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
           <div class="card h-100">
-            <a href="https://josleowuk.github.io/places/" target="_blank"><img class="card-img-top" src="images/map672-final.png" alt="" /></a>
+            <a href="https://josleowuk.github.io/places/" target="_blank">
+              <img class="card-img-top fit-image" src="images/map672-final.png" alt="" /></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://josleowuk.github.io/places/" target="_blank">Project Four</a>
