topic is wildfires

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 Project Three
               </h4>
               <p class="card-text">
-                Heatmap on Brewerssies via QGIS
+                Hexgrid map of Wildfires in Kentucky via QGIS
               </p>
             </div>
           </div>
