Add final project Waste out

--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item mb-2">
+          <div class="card h-100">
+            <a href="https://josleowuk.github.io/wastes/" target="_blank"><img class="card-img-top" src="images/waste-hero.jpg" alt="" /></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="https://josleowuk.github.io/wastes" target="_blank">MAP 673 Final Project - Waste Out</a>
+              </h4>
+              <p class="card-text">
+                The map named “Plastic Waste over the world per Capita” is about the plastic wastes being thrown away everywhere and it has not decreased even with some effort to recycle and reuse plastics.
+              </p>
+            </div>
+          </div>
+        </div>
 
   </section>
 
@@ -112,7 +125,7 @@
           <h2>About me</h2>
           <div class="my-5 clearfix">
             <div class="float-md-left mb-5 mr-md-4">
-              <img class="rounded-circle img-fluid" src="images/jap.jpeg" alt="" />
+              <img class="rounded-circle img-fluid" src="images/cat.jpeg" alt="" />
             </div>
             <p class="lead">
               Hi, I'm Josephine; for short Jos. I'm a web developer specializing
@@ -120,7 +133,7 @@
               libraries as Leaflet and D3.js.
             </p>
             <p class="lead">
-              When I'm not banging my head against assignments, I'm playing Nintendo Switch and reading novels.
+              When I'm not banging my head against assignments, I'm playing Nintendo Switch and reading novels. I am a cat lover.
             </p>
           </div>
         </div>
